--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,3 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::DeprecationWarning:jose.jwt:311"
+]
